Fixed bug that maps were not showing up

--- a/style.css
+++ b/style.css
@@ -580,7 +580,6 @@ text-align: center;
 font-family: 'Open Sans', sans-serif;
 font-size: 17pt;
 margin-bottom: 20px;
-font-weight: lighter;
 color: black
 }
 
